--- a/terraform.tfvars.example
+++ b/terraform.tfvars.example
@@ -1,11 +1,19 @@
 hcloud_token         = "YOUR_TOKEN"
-master_count         = NUMBER
-worker_count         = NUMBER
+hcloud_network_range = "10.0.0.0/16"
+hcloud_subnet_range  = "10.0.0.0/16"
+master_count         = number
+worker_count         = 1
+gameserver_count     = 1
+database_count       = 0
+microservice_count   = 0
+master_type          = "cpx21"
+worker_type          = "cpx21"
+gameserver_type      = "cpx21"
+database_type        = "cpx21"
+microservice_type    = "cpx21"
 kubernetes_api_dns   = "DNS_NAME"
-cni                  = "Cilium/Flannel"
+cni                  = "cilium"
 cidr                 = "10.244.0.0/16"
-master_type          = "TYPE"
-worker_type          = "TYPE"
 image                = "SNAPSHOT_ID"
-ssh_public_key_path  = "PATH"
-ssh_private_key_path = "PATH"
+ssh_public_key_path  = "./keys/id_ed25519.pub"
+ssh_private_key_path = "./keys/id_ed25519"
