--- a/nfs/pvc.yaml
+++ b/nfs/pvc.yaml
@@ -1,11 +1,12 @@
+---
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: hcloud-pvc
+  name: pvc-nfs
 spec:
   accessModes:
-    - ReadWriteOnce
-  storageClassName: hcloud-volumes
+    - ReadWriteMany
   resources:
     requests:
-      storage: 10Gi
+      storage: 2Gi
+  storageClassName: csi-nfs
