--- a/nfs/pvc.yaml
+++ b/nfs/pvc.yaml
@@ -1,12 +1,11 @@
----
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: pvc-nfs
+  name: test-claim
 spec:
+  storageClassName: nfs-client
   accessModes:
     - ReadWriteMany
   resources:
     requests:
-      storage: 2Gi
-  storageClassName: csi-nfs
+      storage: 1Gi
