--- a/terraform.tfvars.example
+++ b/terraform.tfvars.example
@@ -1,9 +1,11 @@
 hcloud_token         = "YOUR_TOKEN"
+hcloud_location      = "hil"
+subnet_zone          = "us-west"
 hcloud_network_range = "192.168.0.0/16"
 hcloud_subnet_range  = "192.168.1.0/24"
 master_count         = 1
-worker_count         = 2
-gameserver_count     = 1
+worker_count         = 1
+gameserver_count     = 0
 database_count       = 0
 microservice_count   = 0
 master_type          = "cpx21"
@@ -11,8 +13,8 @@ worker_type          = "cpx21"
 gameserver_type      = "cpx21"
 database_type        = "cpx21"
 microservice_type    = "cpx21"
-cni                  = "cilium"
+cni                  = "flannel"
 cidr                 = "10.244.0.0/16"
-image                = "SNAPSHOT_ID"
+image                = "ID"
 ssh_public_key_path  = "./keys/id_ed25519.pub"
 ssh_private_key_path = "./keys/id_ed25519"
